// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NowPlayingCard > matches snapshot when paused 1`] = `
<a
  aria-label="Open in Spotify: Test Track"
  class="block w-full no-underline"
  href="https://open.spotify.com/track/play-1"
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    class="nowplaying--spotify w-full grid grid-cols-[auto_1fr] items-center gap-x-4 gap-y-2 px-4 py-3.5 rounded-2xl relative overflow-hidden border-glass-border bg-glass-bg backdrop-blur-glass shadow-glass text-(--text-primary) transition-all duration-300 hover:-translate-y-0.5"
    style="opacity: 1; transform: none;"
    tabindex="0"
  >
    <div
      class="absolute inset-0 z-(--z-base) bg-linear-to-t from-black/(--opacity-hover) via-black/(--opacity-dim) to-transparent pointer-events-none"
    />
    <div
      class="relative w-14 h-14 rounded-lg overflow-hidden shadow-premium"
    >
      <img
        alt="Album"
        class="w-full h-full rounded-lg object-cover transition-opacity duration-300 opacity-100 scale-[1.012] transition-transform duration-900 cubic-bezier-[0.22,0.61,0.36,1] hover:scale-[1.02]"
        decoding="async"
        loading="eager"
        referrerpolicy="no-referrer"
        src="https://example.com/cover.jpg"
      />
    </div>
    <div
      aria-live="polite"
      class="min-w-0 flex flex-col gap-1.5 relative z-(--z-deep)"
    >
      <h3
        class="np-title font-bold leading-tight tracking-tight text-(--text-primary) text-base transition-opacity duration-200 opacity-100"
      >
        Test Track
      </h3>
      <p
        class="np-art text-sm text-(--text-secondary) opacity-(--opacity-strong) truncate"
      >
        Tester
      </p>
      <span
        aria-hidden="true"
        class="inline-flex self-start px-2 py-0.5 text-label-xs font-bold uppercase bg-(--bg-surface-hover)/(--opacity-hover) text-(--text-secondary) rounded-full border border-glass-border"
      >
        Paused
      </span>
      <div
        class="flex items-center gap-2 w-full mt-0.5"
      >
        <div
          class="flex-1 min-w-0 h-1.5 bg-(--bg-surface-hover)/(--opacity-hover) rounded-full overflow-hidden relative"
        >
          <div
            aria-label="Track progress"
            aria-valuemax="180000"
            aria-valuemin="0"
            aria-valuenow="30000"
            class="h-full bg-brand rounded-full origin-left will-change-transform shadow-glow-primary"
            role="progressbar"
            style="transform: scaleX(0.16666666666666663); transition: transform 0.2s ease-out;"
          />
        </div>
        <span
          class="np-time text-xs text-text-tertiary whitespace-nowrap tabular-nums shrink-0"
          style="width: 6.6ch;"
        >
          0:30
           / 
          3:00
        </span>
      </div>
    </div>
  </div>
</a>
`;

exports[`NowPlayingCard > matches snapshot when playing 1`] = `
<a
  aria-label="Open in Spotify: Test Track"
  class="block w-full no-underline"
  href="https://open.spotify.com/track/play-1"
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    class="nowplaying--spotify w-full grid grid-cols-[auto_1fr] items-center gap-x-4 gap-y-2 px-4 py-3.5 rounded-2xl relative overflow-hidden border-glass-border bg-glass-bg backdrop-blur-glass shadow-glass text-(--text-primary) transition-all duration-300 hover:-translate-y-0.5"
    style="opacity: 1; transform: none;"
    tabindex="0"
  >
    <div
      class="absolute inset-0 z-(--z-base) bg-linear-to-t from-black/(--opacity-hover) via-black/(--opacity-dim) to-transparent pointer-events-none"
    />
    <div
      class="relative w-14 h-14 rounded-lg overflow-hidden shadow-premium"
    >
      <img
        alt="Album"
        class="w-full h-full rounded-lg object-cover transition-opacity duration-300 opacity-100 scale-[1.012] transition-transform duration-900 cubic-bezier-[0.22,0.61,0.36,1] hover:scale-[1.02]"
        decoding="async"
        loading="eager"
        referrerpolicy="no-referrer"
        src="https://example.com/cover.jpg"
      />
    </div>
    <div
      aria-live="polite"
      class="min-w-0 flex flex-col gap-1.5 relative z-(--z-deep)"
    >
      <h3
        class="np-title font-bold leading-tight tracking-tight text-(--text-primary) text-base transition-opacity duration-200 opacity-100"
      >
        Test Track
      </h3>
      <p
        class="np-art text-sm text-(--text-secondary) opacity-(--opacity-strong) truncate"
      >
        Tester
      </p>
      <div
        class="flex items-center gap-2 w-full mt-0.5"
      >
        <div
          class="flex-1 min-w-0 h-1.5 bg-(--bg-surface-hover)/(--opacity-hover) rounded-full overflow-hidden relative"
        >
          <div
            aria-label="Track progress"
            aria-valuemax="180000"
            aria-valuemin="0"
            aria-valuenow="30000"
            class="h-full bg-brand rounded-full origin-left will-change-transform shadow-glow-primary"
            role="progressbar"
            style="transform: scaleX(0.16666666666666663); transition: transform 0.2s ease-out;"
          />
        </div>
        <span
          class="np-time text-xs text-text-tertiary whitespace-nowrap tabular-nums shrink-0"
          style="width: 6.6ch;"
        >
          0:30
           / 
          3:00
        </span>
      </div>
    </div>
  </div>
</a>
`;
